Correct the display of Browse Category covers in grid mode to ensure that covers of different sizes do not interfere with the grid display

--- a/code/web/interface/themes/responsive/css-rtl/browse-categories.less
+++ b/code/web/interface/themes/responsive/css-rtl/browse-categories.less
@@ -304,7 +304,7 @@
   -webkit-column-break-inside: avoid;
   display: inline-block;
   text-align: right;
-  width:100%;
+  //width:100%;
 
   img{
     .img-thumbnail();
