--- a/code/web/interface/themes/responsive/css-rtl/main.css
+++ b/code/web/interface/themes/responsive/css-rtl/main.css
@@ -9381,7 +9381,6 @@ a.browse-thumbnail-sorted.active {
   -webkit-column-break-inside: avoid;
   display: inline-block;
   text-align: right;
-  width: 100%;
 }
 .browse-list img {
   padding: 4px;
